# varmsg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: varmsg.c
test/: test1.json
